// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr @import 1`] = `

<style data-emotion-css="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
</div>
<style data-emotion-css="1sh9nmh">
  @import url('https://some-url');h1{color:hotpink;}
</style>

`;

exports[`ssr ClassNames 1`] = `

<style data-emotion-css="15qt0xu 1c3m2c3 15gmrnz y0v68j nug1mu">
  .css-15qt0xu{color:hotpink;}.css-1c3m2c3{color:green;}.css-15gmrnz{color:yellowgreen;}.css-y0v68j{color:green;color:yellowgreen;}.css-nug1mu{color:darkgreen;}
</style>
<div class="css-15qt0xu">
  <span class="other-class css-y0v68j">
  </span>
  <span class="css-nug1mu other-class">
  </span>
</div>

`;

exports[`ssr basic 1`] = `

<style data-emotion-css="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
  some hotpink text
</div>

`;

exports[`ssr global 1`] = `

<style data-emotion-css="6l7sk3">
  html{background-color:hotpink;}
</style>

`;

exports[`ssr global with keyframes 1`] = `

<style data-emotion-css="eti4v9 animation-ocj8pk">
  h1{-webkit-animation:animation-ocj8pk 1s;animation:animation-ocj8pk 1s;}@-webkit-keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}@keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}
</style>

`;

exports[`ssr keyframes 1`] = `

<style data-emotion-css="xsstii animation-nd6tn">
  .css-xsstii{-webkit-animation:1s animation-nd6tn;animation:1s animation-nd6tn;}@-webkit-keyframes animation-nd6tn{from{color:green;}to{color:blue;}}@keyframes animation-nd6tn{from{color:green;}to{color:blue;}}
</style>
<div class="css-xsstii">
</div>

`;

exports[`ssr only render a style once with styled 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="ihiui2">
    .css-ihiui2{color:hotpink;}
  </style>
  <div class="css-ihiui2">
  </div>
  <div class="css-ihiui2">
  </div>
</div>

`;

exports[`ssr only render a style once with the css prop 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="1lrxbo5">
    .css-1lrxbo5{color:hotpink;}
  </style>
  <div class="css-1lrxbo5">
  </div>
  <div class="css-1lrxbo5">
  </div>
</div>

`;

exports[`ssr prefix option false 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr prefix option false with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr prefix option func false 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr prefix option func false with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr prefix option true with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr styled with keyframes 1`] = `

<style data-emotion-css="1y9glrp animation-ocj8pk">
  .css-1y9glrp{-webkit-animation:animation-ocj8pk 1s;animation:animation-ocj8pk 1s;}@-webkit-keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}@keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}
</style>
<div class="css-1y9glrp">
</div>

`;

exports[`ssr with old api @import 1`] = `

<style data-emotion-css="1sh9nmh">
  @import url('https://some-url');h1{color:hotpink;}
</style>
<style data-emotion-css="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
</div>

`;

exports[`ssr with old api ClassNames 1`] = `

<style data-emotion-css="15qt0xu">
  .css-15qt0xu{color:hotpink;}
</style>
<div class="css-15qt0xu">
  <style data-emotion-css="y0v68j">
    .css-y0v68j{color:green;color:yellowgreen;}
  </style>
  <span class="other-class css-y0v68j">
  </span>
  <style data-emotion-css="nug1mu">
    .css-nug1mu{color:darkgreen;}
  </style>
  <span class="css-nug1mu other-class">
  </span>
</div>

`;

exports[`ssr with old api basic 1`] = `

<style data-emotion-css="1lrxbo5">
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
  some hotpink text
</div>

`;

exports[`ssr with old api global 1`] = `

<style data-emotion-css="6l7sk3">
  html{background-color:hotpink;}
</style>

`;

exports[`ssr with old api global with keyframes 1`] = `

<style data-emotion-css="eti4v9 animation-ocj8pk">
  h1{-webkit-animation:animation-ocj8pk 1s;animation:animation-ocj8pk 1s;}@-webkit-keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}@keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}
</style>

`;

exports[`ssr with old api keyframes 1`] = `

<style data-emotion-css="animation-nd6tn">
  @-webkit-keyframes animation-nd6tn{from{color:green;}to{color:blue;}}@keyframes animation-nd6tn{from{color:green;}to{color:blue;}}
</style>
<style data-emotion-css="xsstii">
  .css-xsstii{-webkit-animation:1s animation-nd6tn;animation:1s animation-nd6tn;}
</style>
<div class="css-xsstii">
</div>

`;

exports[`ssr with old api only render a style once with styled 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="ihiui2">
    .css-ihiui2{color:hotpink;}
  </style>
  <div class="css-ihiui2">
  </div>
  <div class="css-ihiui2">
  </div>
</div>

`;

exports[`ssr with old api only render a style once with the css prop 1`] = `

<style data-emotion-css="bjcoli">
  .css-bjcoli{color:green;}
</style>
<div class="css-bjcoli">
  <style data-emotion-css="1lrxbo5">
    .css-1lrxbo5{color:hotpink;}
  </style>
  <div class="css-1lrxbo5">
  </div>
  <div class="css-1lrxbo5">
  </div>
</div>

`;

exports[`ssr with old api prefix option false 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr with old api prefix option false with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr with old api prefix option func false 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr with old api prefix option func false with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr with old api prefix option true with stylis plugins 1`] = `

<style data-emotion-css="k008qs">
  .css-k008qs{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
<div class="css-k008qs">
</div>

`;

exports[`ssr with old api styled with keyframes 1`] = `

<style data-emotion-css="animation-ocj8pk">
  @-webkit-keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}@keyframes animation-ocj8pk{from,to{color:green;}50%{color:hotpink;}}
</style>
<style data-emotion-css="1y9glrp">
  .css-1y9glrp{-webkit-animation:animation-ocj8pk 1s;animation:animation-ocj8pk 1s;}
</style>
<div class="css-1y9glrp">
</div>

`;

exports[`ssr with old api works with nonces 1`] = `

<style data-emotion-css="1r145pv"
       nonce="some-nonce"
>
  html{margin:0;padding:0;font-family:sans-serif;}
</style>
<style data-emotion-css="ihiui2"
       nonce="some-nonce"
>
  .css-ihiui2{color:hotpink;}
</style>
<div class="css-ihiui2">
</div>
<style data-emotion-css="1lrxbo5"
       nonce="some-nonce"
>
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
</div>

`;

exports[`ssr works with nonces 1`] = `

<style data-emotion-css="ihiui2"
       nonce="some-nonce"
>
  .css-ihiui2{color:hotpink;}
</style>
<div class="css-ihiui2">
</div>
<style data-emotion-css="1lrxbo5"
       nonce="some-nonce"
>
  .css-1lrxbo5{color:hotpink;}
</style>
<div class="css-1lrxbo5">
</div>
<style data-emotion-css="1r145pv"
       nonce="some-nonce"
>
  html{margin:0;padding:0;font-family:sans-serif;}
</style>

`;
